--- a/JogoQuiz_FrontEnd/package.json
+++ b/JogoQuiz_FrontEnd/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.1.0",
+    "@angular/animations": "^17.1.1",
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.2.3",
@@ -26,8 +26,9 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.1.1",
     "@angular/cli": "^17.1.1",
-    "@angular/compiler-cli": "^17.1.0",
+    "@angular/compiler-cli": "^17.1.1",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.29",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
