--- a/JogoQuiz_FrontEnd/package.json
+++ b/JogoQuiz_FrontEnd/package.json
@@ -10,25 +10,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.1.1",
-    "@angular/common": "^17.1.0",
-    "@angular/compiler": "^17.1.0",
-    "@angular/core": "^17.2.3",
-    "@angular/forms": "^17.1.0",
-    "@angular/platform-browser": "^17.1.0",
-    "@angular/platform-browser-dynamic": "^17.1.0",
-    "@angular/router": "^17.1.0",
+    "@angular/animations": "^17.3.12",
+    "@angular/common": "^17.3.12",
+    "@angular/compiler": "^17.3.12",
+    "@angular/core": "^17.3.12",
+    "@angular/forms": "^17.3.12",
+    "@angular/platform-browser": "^17.3.12",
+    "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/router": "^17.3.12",
     "bootstrap": "^5.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.1.1",
-    "@angular/cli": "^17.1.1",
-    "@angular/compiler-cli": "^17.1.1",
+    "@angular-devkit/build-angular": "^17.3.11",
+    "@angular/cli": "^19.0.1",
+    "@angular/compiler-cli": "^17.3.12",
+    "@types/estree": "^1.0.6",
+    "@types/http-proxy": "^1.17.15",
     "@types/jasmine": "~5.1.0",
-    "@types/jquery": "^3.5.29",
+    "@types/jquery": "^3.5.32",
+    "esbuild": "^0.24.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
