--- a/JogoQuiz_FrontEnd/Dockerfile
+++ b/JogoQuiz_FrontEnd/Dockerfile
@@ -1,30 +1,16 @@
 # Etapa 1: Build do Angular
-FROM node:21 AS build
+FROM node:21
 
-# Definir o diretório de trabalho dentro do container
 WORKDIR /app
 
-# Copiar os arquivos do projeto para dentro do container
 COPY . .
 
-# Instalar dependências
 RUN npm install
 
-# Instalar o Angular CLI globalmente
+# Compila o front-end para produção
 RUN npm install @angular/cli -g
 
-# Compilar o projeto Angular para produção
-RUN ng build --prod
+EXPOSE 4200
 
-# Etapa 2: Servir com Nginx
-FROM nginx:alpine
-
-# Copiar os arquivos compilados para o diretório do Nginx
-COPY --from=build /app/dist/JogoQuiz_FrontEnd /usr/share/nginx/html
-
-# Expor a porta 80 para servir o conteúdo
-EXPOSE 80
-
-# Comando para rodar o Nginx
-CMD ["nginx", "-g", "daemon off;"]
-
+# Comando para rodar o servidor Nginx
+CMD ["ng", "serve", "--host", "0.0.0.0"]
